# neural-network-toys

./: .gitignore  Cargo.toml  README.md  iris.csv  more-history.jsonl
fixtures/layers/: conv2d.json  fully_connected.json  leaky_relu.json  pool2d.json  softmax.json  tanh.json
math/: Pipfile  make_gradient_test_data.py
src/: csv_data.rs  history.rs  im2col.rs  initialization.rs  layers.rs  main.rs  network.rs  optimizers.rs  plot.rs  reshape.rs  signals.rs  test_utils.rs  training.rs  ui.rs
