[package]
name = "neural-net-toys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
approx = "0.5.0"
bincode = "1.3.3"
clap = { version = "4.2.1", features = ["derive", "wrap_help"] }
csv = "1.2.1"
ctrlc = "3.2.5"
env_logger = "0.10.0"
log = "0.4.17"
mnist = { version = "0.5.0", features = ["download"] }
ndarray = { version = "0.15.6", features = ["approx-0_5", "rayon", "serde"] }
ndarray-rand = "0.14.0"
plotters = "0.3.4"
plotters-svg = "0.3.3"
rand = "0.8.5"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.96"
tui = "0.19.0"
